02-kubernetes/open-policy-agent/gatekeeper/k8s-validating-admission-policy/owner_must_be_provided.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: all-must-have-owner
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    message: "All namespaces must have an `owner` label that points to ternant contact"
    labels:
      - key: owner
        allowedRegex: "^[a-zA-Z]+.robdotsh.com$"
